--- a/src/components/Board/index.css
+++ b/src/components/Board/index.css
@@ -4,6 +4,7 @@
     flex-wrap: wrap;
     position: relative;
     padding: 10px;
+    margin: auto;
     justify-content: center;
     align-items: center;
     height: 212px;
